[gd_scene load_steps=5 format=2]

[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/pinball-sprites/pinball-lever-sheet.png" type="Texture" id=1]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/gimmicks-scripts/pinball-lever-script.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Move"
length = 0.25
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="PinballLever" type="KinematicBody2D"]
collision_mask = 0
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -12, -22 )
texture = ExtResource( 1 )
centered = false
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "RESET"
anims/Move = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 47, 11, 50, 15, 50, 22, -3, 11, -6, -11, -3, -14, 5, -10 )
one_way_collision = true
one_way_collision_margin = 12.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 19, 2 )
collision_layer = 0
collision_mask = 512
input_pickable = false
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
modulate = Color( 0, 0.670588, 1, 1 )
position = Vector2( -19, -2 )
polygon = PoolVector2Array( 14, -8, 47, 9, 51, 13, 52, 18, -3, 0, -3, -7, -3, -12, -3, -14, 2, -14 )
one_way_collision = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
